<resources>
    <string name="app_name">ExerciseApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="next">Next</string>

    <string name="example_text">Example</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>

    <string name="strength">Strength</string>
    <string name="muscle">Muscle</string>
    <string name="fatLose">Fat lose</string>
    <string name="technique">Technique</string>

    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>

    <string name="push">Push</string>
    <string name="pull">Pull</string>
    <string name="squad">Squad</string>
    <string name="dip">Dip</string>

    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="send">Send</string>
    <string name="your_message">Your message</string>
    <string name="subject">Subject:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="time">Time</string>
    <string name="repetition">Repetition</string>
    <string name="unknown">Unknown</string>

    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="kg" translatable="false">kg</string>
    <string name="date">Date</string>
    <string name="nan" translatable="false">NaN</string>
    <string name="empty">Empty</string>
    <string name="workout">Workout</string>
    <string name="create">Create</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="questions">Questions</string>
    <string name="future_functions">Future functions</string>
    <string name="about">About</string>
    <string name="gender">Gender</string>
    <string name="dimensions">Dimensions</string>
    <string name="goals">Goals</string>
    <string name="performance">Performance</string>
    <string name="level">Level</string>
    <string name="lists">Lists</string>
    <string name="create_exercise">Create exercise</string>
    <string name="exercise_created">An exercise has been created</string>
    <string name="select_exercise">Select exercise</string>
    <string name="select_details">Select details</string>
    <string name="details">Details</string>
    <string name="plans">Plans</string>
    <string name="enter_number">Enter number</string>
    <string name="enter_text">Enter text</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="select">Select</string>
    <string name="min_d_one">min. 1</string>
    <string name="exercise_reminder" translatable="false">exerciseReminder</string>
    <string name="channel_description">Channel description</string>
    <string name="log_out">Log out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exercise">Exercise</string>
    <string name="exercise_list">Exercise list</string>
    <string name="hide">Hide</string>
    <string name="show_more">Show more</string>
    <string name="return_text">Return</string>
    <string name="start_workout">Start workout</string>
    <string name="select_goals">Select goals</string>
    <string name="select_gender">Select gender</string>
    <string name="select_height">Select height</string>
    <string name="select_weight">Select weight</string>
    <string name="cm" translatable="false">cm</string>
    <string name="in" translatable="false">in</string>
    <string name="lbs" translatable="false">lbs</string>
    <string name="exercise_name">Exercise name</string>
    <string name="add_image_inactive">Add image(Inactive)</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="show_hide_icon">Show/hide icon</string>
    <string name="exercise_image">Exercise image</string>
    <string name="enter_volume">Enter volume</string>
    <string name="go_to_exercise_list">Go to exercise list</string>
    <string name="enter_the_description">Enter the description...</string>
    <string name="summary_icon">Summary icon</string>
    <string name="created">Created</string>
    <string name="exercise_has_been_added">Your exercise has been added to the library</string>

    <!--    ***_d  d -> dots -->
    <string name="selected_exercise_name_d">Selected exercise name:</string>
    <string name="type_d">Type:</string>
    <string name="sets_d">Set:</string>
    <string name="volume_d">Volume:</string>
    <string name="rest_d">Rest:</string>
    <string name="home">Home</string>
    <string name="Enter_a_name_for_the_exercise">Enter a name for the exercise</string>
    <string name="current_set_d">Current set:</string>
    <string name="last_set_d">Last set:</string>
    <string name="x" translatable="false">x</string>
    <string name="then_d">Then:</string>
    <string name="skip">Skip</string>
    <string name="add_15s">Add 15s</string>
    <string name="completed">Completed</string>
    <string name="time_d">Time:</string>
    <string name="name_d">Name:</string>
    <string name="level_d">Level:</string>
    <string name="body_parts_d">Body parts:</string>
    <string name="kcal_d">Kcal:</string>
    <string name="equipment_d">Equipment:</string>
    <string name="duration_d">Duration:</string>
    <string name="description_d">Description:</string>
    <string name="start">Start!</string>
    <string name="selected_exercise_d">Selected exercise:</string>
</resources>