<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactFragment"
    android:orientation="vertical">

    <EditText
        android:id="@+id/fContact_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        android:padding="15dp"
        android:layout_marginVertical="15dp"/>
    <EditText
        android:id="@+id/fContact_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_message"
        android:padding="15dp"
        android:layout_marginVertical="15dp"/>

    <Button
        android:id="@+id/fContact_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"/>
</LinearLayout>