<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".SignInANDSingUp.WelcomeFragment">

    <TextView
        style="@style/Title_TextView"
        android:id="@+id/fWelcome_TV_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/example_text"
        app:layout_constraintBottom_toTopOf="@+id/fWelcome_TV_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/Subtitle_TextView"
        android:id="@+id/fWelcome_TV_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/example_text"
        app:layout_constraintBottom_toTopOf="@+id/fWelcome_Btn_signIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fWelcome_Btn_signIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/fWelcome_Btn_signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fWelcome_Btn_signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>