<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:mContext=".mResource.LibraryButtonsFragment">

    <View
        android:id="@+id/view"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.widget.Button
        android:id="@+id/frag_library_button_first_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lists"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.45"
        style="@style/MyStandardButtonGuidelines"/>

    <android.widget.Button
        android:id="@+id/frag_library_button_second_btn"
        android:layout_width="0dp"
        android:text="@string/plans"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.45"
        style="@style/MyStandardButtonGuidelinesUnActive"/>

    <android.widget.Button
        android:id="@+id/frag_library_button_third_btn"
        android:layout_width="0dp"
        android:text="@string/create_exercise"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frag_library_button_first_btn"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.95"
        style="@style/MyStandardButtonGuidelines"/>

</androidx.constraintlayout.widget.ConstraintLayout>