<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_volume_exercise_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/exercise_image"
            android:minWidth="50dp"
            android:minHeight="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_volume_exercise_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/image_volume_status_icon"
            app:layout_constraintStart_toEndOf="@+id/image_volume_exercise_image"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_volume_status_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/show_hide_icon"
            android:minWidth="50dp"
            android:minHeight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/frame_volume_extension"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_volume_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="number"
            android:hint="@string/enter_volume"
            android:inputType="number"
            android:minHeight="50dp"
            android:textAlignment="center" />
    </FrameLayout>
</LinearLayout>