<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".Exercise.RepetitionExerciseFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">

        <ImageView
            android:id="@+id/frag_repetition_exercise_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/frag_repetition_exercise_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="25dp"
            android:text="@string/nan"
            android:textSize="28sp" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:padding="15dp">

        <View
            android:id="@+id/frag_repetition_exercise_view_vertical"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/frag_repetition_exercise_view_horizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/frag_repetition_exercise_view_horizontal_two"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frag_repetition_exercise_view_horizontal" />

        <TextView
            android:id="@+id/frag_repetition_exercise_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nan"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/frag_repetition_exercise_view_horizontal"
            app:layout_constraintStart_toEndOf="@+id/frag_repetition_exercise_view_vertical"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/frag_repetition_exercise_text_view_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/frag_repetition_exercise_count"
            app:layout_constraintEnd_toStartOf="@+id/frag_repetition_exercise_count"
            app:layout_constraintTop_toTopOf="@+id/frag_repetition_exercise_count" />

        <TextView
            android:id="@+id/frag_repetition_exercise_text_view_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_set_d"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/frag_repetition_exercise_view_horizontal_two"
            app:layout_constraintEnd_toStartOf="@+id/frag_repetition_exercise_view_vertical"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/frag_repetition_exercise_current_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nan"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/frag_repetition_exercise_text_view_two"
            app:layout_constraintStart_toStartOf="@+id/frag_repetition_exercise_text_view_two"
            app:layout_constraintTop_toBottomOf="@+id/frag_repetition_exercise_text_view_two" />

        <TextView
            android:id="@+id/frag_repetition_exercise_text_view_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_set_d"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/frag_repetition_exercise_view_horizontal_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/frag_repetition_exercise_view_vertical" />

        <TextView
            android:id="@+id/frag_repetition_exercise_sum_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nan"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/frag_repetition_exercise_text_view_three"
            app:layout_constraintStart_toStartOf="@+id/frag_repetition_exercise_text_view_three"
            app:layout_constraintTop_toBottomOf="@+id/frag_repetition_exercise_view_horizontal_two" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>