<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SelectPerformanceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:gravity="center"
            android:text="Select performance"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/fSelectPerformance_pivotVertical"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/fSelectPerformance_pivotHorizontal"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="@+id/fSelectPerformance_pivotVertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/push"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/fSelectPerformance_ET_push"
            app:layout_constraintEnd_toStartOf="@+id/fSelectPerformance_pivotHorizontal"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/fSelectPerformance_ET_push"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="24sp"
            android:hint="0"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/fSelectPerformance_pivotVertical"
            app:layout_constraintEnd_toStartOf="@+id/fSelectPerformance_pivotHorizontal"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pull"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/fSelectPerformance_ET_pull"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fSelectPerformance_pivotHorizontal" />

        <EditText
            android:id="@+id/fSelectPerformance_ET_pull"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="24sp"
            android:hint="0"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/fSelectPerformance_pivotVertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fSelectPerformance_pivotHorizontal" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/squad"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/fSelectPerformance_pivotHorizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fSelectPerformance_pivotVertical" />

        <EditText
            android:id="@+id/fSelectPerformance_ET_dip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="24sp"
            android:hint="0"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/fSelectPerformance_pivotHorizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dip"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fSelectPerformance_pivotHorizontal"
            app:layout_constraintTop_toBottomOf="@+id/fSelectPerformance_pivotVertical" />

        <EditText
            android:id="@+id/fSelectPerformance_ET_squad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="24sp"
            android:hint="0"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fSelectPerformance_pivotHorizontal"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>